# krypt

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/chatmgr/: CMakeLists.txt  ChatMgr.cpp
src/database/: CMakeLists.txt  database.cpp  userdatabase.cpp
src/include/: AuthMgr.h  AuthenticationMiddleware.h  ChatMgr.h  PasswordHash.h  TokenMgr.h  UserMgr.h  database.h  ddl.h  defs.h  server.h  settings.h
src/passwordHash/: CMakeLists.txt  PasswordHash.cpp
src/server/: AuthMgr.cpp  AuthenticationMiddleware.cpp  AuthenticationMiddleware.h  CMakeLists.txt  authmgr.h  server.cpp
submodules/: CMakeLists.txt
tests/: CMakeLists.txt  testRoutes.js  tests.cpp
